<resources>

    <!-- Resources that do not require translation -->
    <string name="app_name" translatable="false">Weather</string>

    <string name="locations">Locations</string>

    <string name="current_location">Current Location</string>
    <string name="no_data">No data</string>
    <string name="temptemplate">%s</string>
    <string name="search_hint">Search..</string>
    <string name="filslike">feels like</string>
    <string name="onlytemptemplate">%.0f °C</string>
    <string name="date_format">h:mm aa dd MMMM</string>
    <string name="date_format_short">h:m aa EE </string>
    <string name="search_fragment_title">Search location</string>
    <string name="please_select_one">Please select on item from  the list below</string>
    <string name="show_weather">show weather</string>
    <string name="save_favorite">save as favorite</string>
    <string name="go_to_details">show more details</string>
    <string name="forecast_for_today">Forecast for today</string>
    <string name="forecast_for_tomorrow">Forecast for tomorrow</string>
    <string name="forecast_for_the_remaining_3_days">Forecast for the remaining 3 days</string>
    <string name="minmaxtemptemplate">%.0f° / %.0f°</string>
    <string name="forecast_for_3_days">Forecast for 3 days</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="main_fragment_title">Weather</string>
    <string name="unit">Unit of Measurement</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="view_source_code">View source code</string>
    <string name="general">General</string>
    <string name="met_the_developer">Met the developer</string>

    <string-array name="units_array">
        <item>°C (Celsius)</item>
        <item>°F (Fahrenheit)</item>
        <item>K (Kelvin)</item>
    </string-array>

    <string-array name="auto_refresh_array">
        <item>Never</item>
        <item>Every hour</item>
        <item>Every 6 hour</item>
        <item>Every 12 hour</item>
        <item>Every 24 hour</item>
    </string-array>
</resources>
