<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="hasLocationSuggestions"
            type="boolean" />

        <variable
            name="hasWeather"
            type="boolean" />

        <variable
            name="location"
            type="com.example.weatherapp.data.model.LocationWithWeather" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.Weather.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="start|center"
                android:text="@string/settings_fragment_title"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@color/weather_gray_50" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/unit_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="start"
            android:text="@string/unit"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/weather_gray_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_unit"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/darkgray_rounded_backgound"
            android:popupBackground="@drawable/darkgray_rounded_backgound"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/unit_textView" />

        <TextView
            android:id="@+id/auto_refresh_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="start"
            android:text="@string/auto_refresh"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/weather_gray_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_unit" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_auto_refresh"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/darkgray_rounded_backgound"
            android:popupBackground="@drawable/darkgray_rounded_backgound"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/auto_refresh_textView" />

        <TextView
            android:id="@+id/general_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="start"
            android:text="@string/general"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/weather_gray_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_auto_refresh" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/darkgray_rounded_backgound"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/general_textView">

            <TextView
                android:id="@+id/textView_developer"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:drawableEnd="@drawable/ic_next"
                android:gravity="center_vertical"
                android:text="@string/met_the_developer"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/weather_accent_color" />

            <View
                android:id="@+id/dividerView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView_code"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:drawableEnd="@drawable/ic_next"
                android:gravity="center_vertical"
                android:text="@string/view_source_code"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/weather_accent_color" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>